--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -20,15 +20,15 @@
       align-items: center;
       justify-content: center;
       background-color: #444;
-      padding: 9px; /* 10%ダウン */
-      gap: 9px; /* 10%ダウン */
+      padding: 10px;
+      gap: 10px;
     }
     .menu-button {
       background-color: #555;
       color: white;
       border: none;
-      padding: 9px 18px; /* 10%ダウン */
-      border-radius: 4.5px; /* 10%ダウン */
+      padding: 10px 20px;
+      border-radius: 5px;
       cursor: pointer;
       transition: background-color 0.3s;
     }
@@ -37,18 +37,18 @@
     }
     .menu-title {
       color: white;
-      font-size: 1.08rem; /* 10%ダウン */
+      font-size: 1.2rem;
       margin: 0;
     }
     .pattern-selector {
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 9px; /* 10%ダウン */
-      margin: 9px 0; /* 10%ダウン */
+      gap: 10px;
+      margin: 10px 0;
     }
     .pattern-selector label, .pattern-selector select, .pattern-selector input {
-      font-size: 0.9rem; /* 10%ダウン */
+      font-size: 1rem;
     }
     .field-wrapper {
       display: flex;
@@ -56,29 +56,29 @@
       align-items: flex-start;
       flex: 1;
       overflow-x: auto;
-      padding: 9px; /* 10%ダウン */
+      padding: 10px;
     }
     .field-box {
       display: grid;
-      grid-template-rows: repeat(4, 90px); /* 10%ダウン */
-      gap: 9px; /* 10%ダウン */
+      grid-template-rows: repeat(4, 100px);
+      gap: 10px;
       border: 2px solid #ccc;
-      border-radius: 9px; /* 10%ダウン */
-      padding: 9px; /* 10%ダウン */
+      border-radius: 10px;
+      padding: 10px;
       background-color: #fff;
-      width: calc(100% - 36px); /* 10%ダウン */
-      max-width: 720px; /* 10%ダウン */
+      width: calc(100% - 40px);
+      max-width: 800px;
     }
     .field-row {
       display: grid;
-      gap: 7.2px; /* 10%ダウン */
+      gap: 8px;
     }
     .field-slot {
       background-color: #e0e0e0;
       border: 2px dashed #bbb;
-      border-radius: 9px; /* 10%ダウン */
-      width: 81px; /* 10%ダウン */
-      height: 90px; /* 10%ダウン */
+      border-radius: 10px;
+      width: 90px;
+      height: 100px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -87,9 +87,9 @@
     .field-card {
       background-color: white;
       border: 1px solid #ddd;
-      border-radius: 9px; /* 10%ダウン */
-      width: 81px; /* 10%ダウン */
-      height: 90px; /* 10%ダウン */
+      border-radius: 10px;
+      width: 90px;
+      height: 100px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       display: flex;
       align-items: center;
@@ -99,20 +99,20 @@
       width: 100%;
       height: auto;
       object-fit: contain;
-      border-radius: 9px; /* 10%ダウン */
+      border-radius: 10px;
     }
     .keyboard-container {
       display: grid;
       grid-template-columns: repeat(14, 1fr);
-      grid-template-rows: repeat(4, 63px); /* 10%ダウン */
-      gap: 3.6px; /* 10%ダウン */
-      padding: 9px; /* 10%ダウン */
+      grid-template-rows: repeat(4, 70px);
+      gap: 4px;
+      padding: 10px;
       justify-content: center;
       background-color: #444;
       position: fixed;
       bottom: 0;
-      width: calc(100% - 18px); /* 10%ダウン */
-      max-width: 810px; /* 10%ダウン */
+      width: calc(100% - 20px);
+      max-width: 900px;
       margin: 0 auto;
       box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
       overflow-x: auto;
@@ -120,9 +120,9 @@
     .keyboard-button {
       background-color: #eee;
       border: 1px solid #ccc;
-      border-radius: 4.5px; /* 10%ダウン */
-      width: 49.5px; /* 10%ダウン */
-      height: 63px; /* 10%ダウン */
+      border-radius: 5px;
+      width: 55px;
+      height: 70px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -134,36 +134,35 @@
       width: 75%;
       height: 75%;
       object-fit: contain;
-      border-radius: 4.5px; /* 10%ダウン */
+      border-radius: 5px;
     }
     .keyboard-button:hover {
       transform: scale(1.05);
       background-color: #ddd;
     }
 
-    /* iPhone用のサイズ調整 */
+    /* スマホ表示対応のサイズ調整 */
     @media (max-width: 768px) {
       .field-box {
-        grid-template-rows: repeat(4, 72px); /* 10%ダウン */
-        width: calc(100% - 18px); /* 10%ダウン */
+        grid-template-rows: repeat(4, 80px);
+        width: calc(100% - 20px);
       }
       .field-slot, .field-card {
-        width: calc((100vw - 72px) / 8); /* 10%ダウン */
-        height: calc(((100vw - 72px) / 8) * 1.33);
+        width: calc((100vw - 80px) / 8);
+        height: calc(((100vw - 80px) / 8) * 1.33);
       }
       .keyboard-container {
-        grid-template-columns: repeat(14, minmax(27px, 1fr)); /* 10%ダウン */
-        gap: 1.8px; /* 段落幅をダウン */
-        width: calc(100% - 9px); /* 10%ダウン */
-        height: calc(100% - 10%); /* 高さを10%ダウン */
+        grid-template-columns: repeat(14, minmax(30px, 1fr));
+        gap: 2px;
+        width: calc(100% - 10px);
       }
       .keyboard-button {
-        width: 40.5px; /* 10%ダウン */
-        height: 54px; /* 10%ダウン */
+        width: 45px;
+        height: 60px;
       }
       .keyboard-button img {
-        width: 77%; /* 10%アップ */
-        height: 77%; /* 10%アップ */
+        width: 70%;
+        height: 70%;
       }
     }
   </style>
