--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -77,8 +77,8 @@
       background-color: #e0e0e0;
       border: 2px dashed #bbb;
       border-radius: 10px;
-      width: 90px;
-      height: 100px;
+      width: 100%;
+      height: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -88,8 +88,8 @@
       background-color: white;
       border: 1px solid #ddd;
       border-radius: 10px;
-      width: 90px;
-      height: 100px;
+      width: 100%;
+      height: 100%;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       display: flex;
       align-items: center;
