--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -60,25 +60,23 @@
     }
     .field-box {
       display: grid;
-      grid-template-rows: repeat(4, 100px);
-      gap: 12px; /* 縦の段落幅を最適化 */
+      grid-template-rows: repeat(4, 80px);
+      gap: 10px;
       border: 2px solid #ccc;
       border-radius: 10px;
       padding: 10px;
       background-color: #fff;
-      width: calc(100% - 40px);
-      max-width: 800px;
     }
     .field-row {
       display: grid;
-      gap: 10px; /* 横の段落幅も調整 */
+      gap: 10px;
     }
-    .field-slot, .field-card {
+    .field-slot {
       background-color: #e0e0e0;
       border: 2px dashed #bbb;
       border-radius: 10px;
-      width: 100%;
-      height: 100%;
+      width: 60px;
+      height: 80px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -87,7 +85,13 @@
     .field-card {
       background-color: white;
       border: 1px solid #ddd;
+      border-radius: 10px;
+      width: 60px;
+      height: 80px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     .field-card img {
       width: 100%;
@@ -98,24 +102,23 @@
     .keyboard-container {
       display: grid;
       grid-template-columns: repeat(14, 1fr);
-      grid-template-rows: repeat(4, 100px); /* 高さをフィールドと一致させる */
-      gap: 10px; /* 段落幅もフィールドと一致 */
+      grid-template-rows: repeat(4, 60px);
+      gap: 5px;
       padding: 10px;
-      justify-content: center;
+      justify-items: center;
       background-color: #444;
       position: fixed;
       bottom: 0;
-      width: calc(100% - 20px);
-      max-width: 900px;
-      margin: 0 auto;
+      width: 100%;
       box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
       overflow-x: auto;
     }
     .keyboard-button {
       background-color: #eee;
       border: 1px solid #ccc;
-      border-radius: 10px;
+      border-radius: 5px;
       width: 100%;
+      max-width: 60px;
       height: 100%;
       display: flex;
       align-items: center;
@@ -125,39 +128,29 @@
       overflow: hidden;
     }
     .keyboard-button img {
-      width: 100%;
+      width: 75%;
       height: auto;
-      object-fit: contain;
-      border-radius: 10px;
+      object-fit: cover;
+      border-radius: 5px;
     }
     .keyboard-button:hover {
       transform: scale(1.05);
       background-color: #ddd;
     }
 
-    /* スマホ表示対応のサイズ調整 */
-    @media (max-width: 768px) {
-      .field-box {
-        grid-template-rows: repeat(4, 80px);
-        width: calc(100% - 20px);
-      }
+    /* iPhone向けの調整 */
+    @media (max-width: 430px) {
       .field-slot, .field-card {
-        width: calc((100vw - 80px) / 8);
-        height: calc(((100vw - 80px) / 8) * 1.33);
+        width: calc(100vw / 8 - 10px);
+        height: auto;
       }
       .keyboard-container {
-        grid-template-columns: repeat(14, minmax(30px, 1fr));
-        grid-template-rows: repeat(4, 80px); /* 高さをフィールドと一致 */
-        gap: 8px; /* スマホ用の段落幅調整 */
-        width: calc(100% - 10px);
+        grid-template-columns: repeat(14, 1fr);
+        gap: 2px;
+        padding: 5px;
       }
       .keyboard-button {
-        width: 100%;
-        height: 100%;
-      }
-      .keyboard-button img {
-        width: 100%;
-        height: auto;
+        max-width: calc(100vw / 14 - 4px);
       }
     }
   </style>
@@ -177,7 +170,7 @@
       <option value="16">上級者 (16枚)</option>
       <option value="custom">カスタム</option>
     </select>
-    <input type="number" id="custom-columns" min="1" max="16" value="8" style="display:none;" onchange="updateFieldPattern()">
+    <input type="number" id="custom-columns" min="1" max="16" value="4" style="display:none;" onchange="updateFieldPattern()">
   </div>
 
   <div class="field-wrapper">
@@ -203,7 +196,7 @@
       .catch(error => console.error('データの読み込みに失敗しました:', error));
 
     const fieldBox = document.getElementById('field-box');
-    let currentColumns = 8;
+    let currentColumns = 4;
 
     function createKeyboard() {
       const rows = ['A', 'B', 'C', 'D'];
@@ -246,9 +239,9 @@
     function addCardToField(card) {
       const rows = fieldBox.querySelectorAll('.field-row');
       for (let row of rows) {
-        const slots = row.querySelectorAll('.field-slot');
-        for (let slot of slots) {
-          if (!slot.hasChildNodes()) {
+        if (row.children.length < currentColumns) {
+          const slot = row.querySelector('.field-slot');
+          if (slot) {
             const cardElement = document.createElement('div');
             cardElement.classList.add('field-card');
 
@@ -257,7 +250,7 @@
             img.alt = card.カード名;
 
             cardElement.appendChild(img);
-            slot.replaceWith(cardElement);
+            row.replaceChild(cardElement, slot);
             return;
           }
         }
