--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -60,23 +60,25 @@
     }
     .field-box {
       display: grid;
-      grid-template-rows: repeat(4, 80px);
+      grid-template-rows: repeat(4, 100px);
       gap: 10px;
       border: 2px solid #ccc;
       border-radius: 10px;
       padding: 10px;
       background-color: #fff;
+      width: calc(100% - 40px);
+      max-width: 800px;
     }
     .field-row {
       display: grid;
-      gap: 10px;
+      gap: 8px;
     }
     .field-slot {
       background-color: #e0e0e0;
       border: 2px dashed #bbb;
       border-radius: 10px;
-      width: 60px;
-      height: 80px;
+      width: 100%;
+      height: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -86,8 +88,8 @@
       background-color: white;
       border: 1px solid #ddd;
       border-radius: 10px;
-      width: 60px;
-      height: 80px;
+      width: 100%;
+      height: 100%;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       display: flex;
       align-items: center;
@@ -102,14 +104,16 @@
     .keyboard-container {
       display: grid;
       grid-template-columns: repeat(14, 1fr);
-      grid-template-rows: repeat(4, 60px);
-      gap: 5px;
+      grid-template-rows: repeat(4, 70px);
+      gap: 4px;
       padding: 10px;
-      justify-items: center;
+      justify-content: center;
       background-color: #444;
       position: fixed;
       bottom: 0;
-      width: 100%;
+      width: calc(100% - 20px);
+      max-width: 900px;
+      margin: 0 auto;
       box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
       overflow-x: auto;
     }
@@ -117,9 +121,8 @@
       background-color: #eee;
       border: 1px solid #ccc;
       border-radius: 5px;
-      width: 100%;
-      max-width: 60px;
-      height: 100%;
+      width: 55px;
+      height: 70px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -128,14 +131,39 @@
       overflow: hidden;
     }
     .keyboard-button img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
+      width: 75%;
+      height: 75%;
+      object-fit: contain;
       border-radius: 5px;
     }
     .keyboard-button:hover {
       transform: scale(1.05);
       background-color: #ddd;
+    }
+
+    /* スマホ表示対応のサイズ調整 */
+    @media (max-width: 768px) {
+      .field-box {
+        grid-template-rows: repeat(4, 80px);
+        width: calc(100% - 20px);
+      }
+      .field-slot, .field-card {
+        width: calc((100vw - 80px) / 8);
+        height: calc(((100vw - 80px) / 8) * 1.33);
+      }
+      .keyboard-container {
+        grid-template-columns: repeat(14, minmax(30px, 1fr));
+        gap: 2px;
+        width: calc(100% - 10px);
+      }
+      .keyboard-button {
+        width: 45px;
+        height: 60px;
+      }
+      .keyboard-button img {
+        width: 70%;
+        height: 70%;
+      }
     }
   </style>
 </head>
@@ -154,7 +182,7 @@
       <option value="16">上級者 (16枚)</option>
       <option value="custom">カスタム</option>
     </select>
-    <input type="number" id="custom-columns" min="1" max="16" value="4" style="display:none;" onchange="updateFieldPattern()">
+    <input type="number" id="custom-columns" min="1" max="16" value="8" style="display:none;" onchange="updateFieldPattern()">
   </div>
 
   <div class="field-wrapper">
@@ -180,7 +208,7 @@
       .catch(error => console.error('データの読み込みに失敗しました:', error));
 
     const fieldBox = document.getElementById('field-box');
-    let currentColumns = 4;
+    let currentColumns = 8;
 
     function createKeyboard() {
       const rows = ['A', 'B', 'C', 'D'];
@@ -223,17 +251,20 @@
     function addCardToField(card) {
       const rows = fieldBox.querySelectorAll('.field-row');
       for (let row of rows) {
-        if (row.children.length < currentColumns) {
-          const slot = document.createElement('div');
-          slot.classList.add('field-card');
+        const slots = row.querySelectorAll('.field-slot');
+        for (let slot of slots) {
+          if (!slot.hasChildNodes()) {
+            const cardElement = document.createElement('div');
+            cardElement.classList.add('field-card');
 
-          const img = document.createElement('img');
-          img.src = card.画像;
-          img.alt = card.カード名;
+            const img = document.createElement('img');
+            img.src = card.画像;
+            img.alt = card.カード名;
 
-          slot.appendChild(img);
-          row.appendChild(slot);
-          return;
+            cardElement.appendChild(img);
+            slot.replaceWith(cardElement);
+            return;
+          }
         }
       }
     }
