--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -10,17 +10,16 @@
       background-color: #f9f9f9;
       margin: 0;
       padding: 0;
+      text-align: center;
       display: flex;
       flex-direction: column;
       height: 100vh;
-      overflow: hidden;
     }
     .menu-bar {
       display: flex;
-      align-items: center;
       justify-content: center;
       background-color: #444;
-      padding: 10px;
+      padding: 10px 0;
       gap: 10px;
     }
     .menu-button {
@@ -35,163 +34,70 @@
     .menu-button:hover {
       background-color: #777;
     }
-    .menu-title {
-      color: white;
-      font-size: 1.2rem;
-      margin: 0;
-    }
-    .pattern-selector {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    #field-container {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
       gap: 10px;
-      margin: 10px 0;
-    }
-    .pattern-selector label, .pattern-selector select, .pattern-selector input {
-      font-size: 1rem;
-    }
-    .field-wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
+      padding: 20px;
+      justify-items: center;
       flex: 1;
-      overflow-x: auto;
-      padding: 10px;
-    }
-    .field-box {
-      display: grid;
-      grid-template-rows: repeat(4, 100px);
-      gap: 10px;
-      border: 2px solid #ccc;
-      border-radius: 10px;
-      padding: 10px;
-      background-color: #fff;
-      width: calc(100% - 40px);
-      max-width: 800px;
-    }
-    .field-row {
-      display: grid;
-      gap: 8px;
+      overflow-y: auto;
     }
     .field-slot {
       background-color: #e0e0e0;
       border: 2px dashed #bbb;
       border-radius: 10px;
-      width: 100%;
-      height: 100%;
+      width: 60px;
+      height: 80px;
       display: flex;
       align-items: center;
       justify-content: center;
-      transition: background-color 0.2s;
-    }
-    .field-card {
-      background-color: white;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      width: 100%;
-      height: 100%;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .field-card img {
-      width: 100%;
-      height: auto;
-      object-fit: contain;
-      border-radius: 10px;
     }
     .keyboard-container {
       display: grid;
       grid-template-columns: repeat(14, 1fr);
-      grid-template-rows: repeat(4, 70px);
-      gap: 4px;
+      grid-auto-rows: 60px;
+      gap: 5px;
       padding: 10px;
-      justify-content: center;
+      justify-items: center;
       background-color: #444;
       position: fixed;
       bottom: 0;
-      width: calc(100% - 20px);
-      max-width: 900px;
-      margin: 0 auto;
+      width: 100%;
       box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
-      overflow-x: auto;
     }
     .keyboard-button {
       background-color: #eee;
       border: 1px solid #ccc;
       border-radius: 5px;
-      width: 55px;
-      height: 70px;
+      width: 100%;
+      max-width: 60px;
+      height: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
       cursor: pointer;
       transition: transform 0.2s;
-      overflow: hidden;
-    }
-    .keyboard-button img {
-      width: 75%;
-      height: 75%;
-      object-fit: contain;
-      border-radius: 5px;
     }
     .keyboard-button:hover {
       transform: scale(1.05);
       background-color: #ddd;
     }
-
-    /* スマホ表示対応のサイズ調整 */
-    @media (max-width: 768px) {
-      .field-box {
-        grid-template-rows: repeat(4, 80px);
-        width: calc(100% - 20px);
-      }
-      .field-slot, .field-card {
-        width: calc((100vw - 80px) / 8);
-        height: calc(((100vw - 80px) / 8) * 1.33);
-      }
-      .keyboard-container {
-        grid-template-columns: repeat(14, minmax(30px, 1fr));
-        gap: 2px;
-        width: calc(100% - 10px);
-      }
-      .keyboard-button {
-        width: 45px;
-        height: 60px;
-      }
-      .keyboard-button img {
-        width: 70%;
-        height: 70%;
-      }
-    }
   </style>
 </head>
 <body>
+  <h1>ステップキーボード</h1>
   <div class="menu-bar">
-    <p class="menu-title">ステップキーボード</p>
     <button class="menu-button" onclick="window.location.href='index.html'">カードライブラリーへ戻る</button>
     <button class="menu-button" onclick="window.location.href='https://noritap.github.io/tapdance-cardgame/'">タイトル画面に戻る</button>
   </div>
 
-  <div class="pattern-selector">
-    <label for="pattern">フィールドパターン:</label>
-    <select id="pattern" onchange="updateFieldPattern()">
-      <option value="4">初心者 (4枚)</option>
-      <option value="8">中級者 (8枚)</option>
-      <option value="16">上級者 (16枚)</option>
-      <option value="custom">カスタム</option>
-    </select>
-    <input type="number" id="custom-columns" min="1" max="16" value="8" style="display:none;" onchange="updateFieldPattern()">
-  </div>
-
-  <div class="field-wrapper">
-    <div class="field-box" id="field-box">
-      <div class="field-row"></div>
-      <div class="field-row"></div>
-      <div class="field-row"></div>
-      <div class="field-row"></div>
-    </div>
+  <h2>フィールド</h2>
+  <div id="field-container">
+    <div class="field-slot"></div>
+    <div class="field-slot"></div>
+    <div class="field-slot"></div>
+    <div class="field-slot"></div>
   </div>
 
   <div class="keyboard-container" id="keyboard-container"></div>
@@ -203,34 +109,25 @@
         window.cardData = data;
         createKeyboard();
         mapCardsToButtons(data);
-        updateFieldPattern();
       })
       .catch(error => console.error('データの読み込みに失敗しました:', error));
 
-    const fieldBox = document.getElementById('field-box');
-    let currentColumns = 8;
+    const buttonMapping = {
+      'A1': 3, 'A2': 4, 'A3': 5, 'A4': 6
+    };
 
     function createKeyboard() {
-      const rows = ['A', 'B', 'C', 'D'];
-      const columns = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14];
       const keyboardContainer = document.getElementById('keyboard-container');
+      const labels = Object.keys(buttonMapping);
 
-      rows.forEach(row => {
-        columns.forEach(col => {
-          const button = document.createElement('div');
-          button.classList.add('keyboard-button');
-          button.dataset.label = `${row}${col}`;
-          keyboardContainer.appendChild(button);
-        });
+      labels.forEach(label => {
+        const button = document.createElement('div');
+        button.classList.add('keyboard-button');
+        button.dataset.label = label;
+        button.textContent = label;
+        keyboardContainer.appendChild(button);
       });
     }
-
-    const buttonMapping = {
-      'A1': 3, 'A2': 4, 'A3': 5, 'A4': 6, 'A5': 7, 'A6': 8, 'A7': 9, 'A8': 16, 'A9': 15, 'A10': 14, 'A11': 13, 'A12': 12, 'A13': 11, 'A14': 10,
-      'B1': 31, 'B2': 32, 'B3': 33, 'B4': 29, 'B5': 34, 'B6': 35, 'B7': 36, 'B8': 42, 'B9': 41, 'B10': 40, 'B11': 30, 'B12': 39, 'B13': 38, 'B14': 37,
-      'C1': 17, 'C2': 18, 'C3': 19, 'C4': 1, 'C5': 20, 'C6': 21, 'C7': 22, 'C8': 28, 'C9': 27, 'C10': 26, 'C11': 1, 'C12': 25, 'C13': 24, 'C14': 23,
-      'D1': 43, 'D2': 44, 'D3': 45, 'D4': 2, 'D5': 46, 'D6': 47, 'D7': 48, 'D8': 54, 'D9': 53, 'D10': 53, 'D11': 2, 'D12': 51, 'D13': 50, 'D14': 49
-    };
 
     function mapCardsToButtons(cards) {
       document.querySelectorAll('.keyboard-button').forEach(button => {
@@ -238,59 +135,23 @@
         const card = cards.find(c => c.カードID === cardId);
 
         if (card) {
-          const img = document.createElement('img');
-          img.src = card.画像;
-          img.alt = card.カード名;
-          button.appendChild(img);
-
           button.addEventListener('click', () => addCardToField(card));
         }
       });
     }
 
     function addCardToField(card) {
-      const rows = fieldBox.querySelectorAll('.field-row');
-      for (let row of rows) {
-        const slots = row.querySelectorAll('.field-slot');
-        for (let slot of slots) {
-          if (!slot.hasChildNodes()) {
-            const cardElement = document.createElement('div');
-            cardElement.classList.add('field-card');
+      const fieldContainer = document.getElementById('field-container');
+      const emptySlot = fieldContainer.querySelector('.field-slot');
 
-            const img = document.createElement('img');
-            img.src = card.画像;
-            img.alt = card.カード名;
+      if (emptySlot) {
+        const cardElement = document.createElement('img');
+        cardElement.src = card.画像;
+        cardElement.alt = card.カード名;
+        cardElement.classList.add('field-card');
 
-            cardElement.appendChild(img);
-            slot.replaceWith(cardElement);
-            return;
-          }
-        }
+        emptySlot.replaceWith(cardElement);
       }
-    }
-
-    function updateFieldPattern() {
-      const pattern = document.getElementById('pattern').value;
-      const customInput = document.getElementById('custom-columns');
-
-      if (pattern === 'custom') {
-        customInput.style.display = 'inline';
-        currentColumns = parseInt(customInput.value);
-      } else {
-        customInput.style.display = 'none';
-        currentColumns = parseInt(pattern);
-      }
-
-      const rows = fieldBox.querySelectorAll('.field-row');
-      rows.forEach(row => {
-        row.innerHTML = '';
-        row.style.gridTemplateColumns = `repeat(${currentColumns}, 1fr)`;
-        for (let i = 0; i < currentColumns; i++) {
-          const slot = document.createElement('div');
-          slot.classList.add('field-slot');
-          row.appendChild(slot);
-        }
-      });
     }
   </script>
 </body>
