--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -61,7 +61,7 @@
     .field-box {
       display: grid;
       grid-template-rows: repeat(4, 100px);
-      gap: 12px; /* 縦の段落幅を最適化 */
+      gap: 12px;
       border: 2px solid #ccc;
       border-radius: 10px;
       padding: 10px;
@@ -71,7 +71,7 @@
     }
     .field-row {
       display: grid;
-      gap: 10px; /* 横の段落幅も調整 */
+      gap: 10px;
     }
     .field-slot, .field-card {
       background-color: #e0e0e0;
@@ -98,8 +98,8 @@
     .keyboard-container {
       display: grid;
       grid-template-columns: repeat(14, 1fr);
-      grid-template-rows: repeat(4, 100px); /* 高さをフィールドと一致させる */
-      gap: 10px; /* 段落幅もフィールドと一致 */
+      grid-template-rows: repeat(4, 100px);
+      gap: 10px;
       padding: 10px;
       justify-content: center;
       background-color: #444;
@@ -134,8 +134,6 @@
       transform: scale(1.05);
       background-color: #ddd;
     }
-
-    /* スマホ表示対応のサイズ調整 */
     @media (max-width: 768px) {
       .field-box {
         grid-template-rows: repeat(4, 80px);
@@ -146,10 +144,13 @@
         height: calc(((100vw - 80px) / 8) * 1.33);
       }
       .keyboard-container {
-        grid-template-columns: repeat(14, minmax(30px, 1fr));
-        grid-template-rows: repeat(4, 80px); /* 高さをフィールドと一致 */
-        gap: 8px; /* スマホ用の段落幅調整 */
-        width: calc(100% - 10px);
+        grid-template-columns: repeat(14, minmax(20px, 1fr));
+        grid-template-rows: repeat(4, 60px);
+        gap: 5px;
+        width: 100vw;
+        padding: 5px;
+        box-sizing: border-box;
+        overflow-x: auto;
       }
       .keyboard-button {
         width: 100%;
@@ -289,5 +290,4 @@
     }
   </script>
 </body>
-</html>
 </html>
