--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -83,15 +83,18 @@
       align-items: center;
       justify-content: center;
       transition: background-color 0.2s;
+      position: relative;
+      overflow: hidden;
     }
     .field-card {
       background-color: white;
       border: 1px solid #ddd;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
     }
     .field-card img {
       width: 100%;
-      height: auto;
+      height: 100%;
       object-fit: contain;
       border-radius: 10px;
     }
@@ -142,6 +145,11 @@
       .field-slot, .field-card {
         width: calc((100vw - 80px) / 8);
         height: calc(((100vw - 80px) / 8) * 1.33);
+      }
+      .field-card img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
       }
       .keyboard-container {
         grid-template-columns: repeat(14, minmax(20px, 1fr));
