--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -5,6 +5,9 @@
   <title>ステップキーボード</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    * {
+      box-sizing: border-box;  /* すべての要素にbox-sizingを適用 */
+    }
     body {
       font-family: Arial, sans-serif;
       background-color: #f9f9f9;
@@ -95,6 +98,8 @@
     .field-card img {
       width: 100%;
       height: 100%;
+      max-width: 100%;
+      max-height: 100%;
       object-fit: contain;
       border-radius: 10px;
     }
@@ -148,7 +153,9 @@
       }
       .field-card img {
         width: 100%;
-        height: 100%;
+        height: auto;
+        max-width: 100%;
+        max-height: 100%;
         object-fit: contain;
       }
       .keyboard-container {
