--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * {
-      box-sizing: border-box;  /* すべての要素にbox-sizingを適用 */
+      box-sizing: border-box;
     }
     body {
       font-family: Arial, sans-serif;
@@ -53,6 +53,24 @@
     .pattern-selector label, .pattern-selector select, .pattern-selector input {
       font-size: 1rem;
     }
+    .action-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin: 10px 0;
+    }
+    .action-button {
+      background-color: #555;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    .action-button:hover {
+      background-color: #777;
+    }
     .field-wrapper {
       display: flex;
       justify-content: center;
@@ -94,6 +112,7 @@
       border: 1px solid #ddd;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       overflow: hidden;
+      cursor: pointer;
     }
     .field-card img {
       width: 100%;
@@ -196,6 +215,11 @@
     <input type="number" id="custom-columns" min="1" max="16" value="8" style="display:none;" onchange="updateFieldPattern()">
   </div>
 
+  <div class="action-buttons">
+    <button class="action-button" onclick="undoLastAction()">やり直し</button>
+    <button class="action-button" onclick="resetField()">すべてクリア</button>
+  </div>
+
   <div class="field-wrapper">
     <div class="field-box" id="field-box">
       <div class="field-row"></div>
@@ -220,6 +244,7 @@
 
     const fieldBox = document.getElementById('field-box');
     let currentColumns = 8;
+    const actionHistory = [];
 
     function createKeyboard() {
       const rows = ['A', 'B', 'C', 'D'];
@@ -273,11 +298,45 @@
             img.alt = card.カード名;
 
             cardElement.appendChild(img);
+            cardElement.addEventListener('click', () => removeCardFromField(cardElement, slot));
+
             slot.replaceWith(cardElement);
+            actionHistory.push({ action: 'add', element: cardElement, slot: slot });
             return;
           }
         }
       }
+    }
+
+    function removeCardFromField(cardElement, slot) {
+      const emptySlot = document.createElement('div');
+      emptySlot.classList.add('field-slot');
+      cardElement.replaceWith(emptySlot);
+      actionHistory.push({ action: 'remove', element: emptySlot, slot: cardElement });
+    }
+
+    function undoLastAction() {
+      const lastAction = actionHistory.pop();
+      if (lastAction) {
+        if (lastAction.action === 'add') {
+          lastAction.element.replaceWith(lastAction.slot);
+        } else if (lastAction.action === 'remove') {
+          lastAction.slot.replaceWith(lastAction.element);
+        }
+      }
+    }
+
+    function resetField() {
+      const rows = fieldBox.querySelectorAll('.field-row');
+      rows.forEach(row => {
+        row.innerHTML = '';
+        for (let i = 0; i < currentColumns; i++) {
+          const slot = document.createElement('div');
+          slot.classList.add('field-slot');
+          row.appendChild(slot);
+        }
+      });
+      actionHistory.length = 0;
     }
 
     function updateFieldPattern() {
