--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -198,6 +198,7 @@
     <button class="menu-button" onclick="window.location.href='https://noritap.github.io/tapdance-cardgame/'">タイトル画面に戻る</button>
     <button class="menu-button" onclick="saveCombination()">保存</button>
     <button class="menu-button" onclick="window.location.href='practice.html'">練習モード</button>
+    <button class="menu-button" onclick="window.location.href='https://noritap.github.io/tapdance-cardgame2/'">ゲーム画面へ</button>
   </div>
 
   <div class="pattern-selector">
