--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -242,13 +242,6 @@
   <div class="action-buttons">
     <button class="action-button" onclick="undoLastAction()">やり直し</button>
     <button class="action-button" onclick="resetField()">すべてクリア</button>
-    <select id="save-slot-selector">
-      <option value="1">スロット1</option>
-      <option value="2">スロット2</option>
-      <option value="3">スロット3</option>
-      <option value="4">スロット4</option>
-    </select>
-    <button class="action-button" onclick="loadCombination()">読み込み</button>
   </div>
 
   <div class="field-wrapper">
@@ -282,26 +275,127 @@
     let currentColumns = 8;
     const actionHistory = [];
 
-    function saveCombination() {
-      const slot = document.getElementById('save-slot-selector').value;
-      const cards = Array.from(document.querySelectorAll('.field-card img')).map(img => img.src);
-      localStorage.setItem(`savedCombination${slot}`, JSON.stringify(cards));
-      alert(`カードの並びをスロット${slot}に保存しました！`);
+    function createKeyboard() {
+      const rows = ['A', 'B', 'C', 'D'];
+      const columns = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14];
+      const keyboardContainer = document.getElementById('keyboard-container');
+
+      rows.forEach(row => {
+        columns.forEach(col => {
+          const button = document.createElement('div');
+          button.classList.add('keyboard-button');
+          button.dataset.label = `${row}${col}`;
+          keyboardContainer.appendChild(button);
+        });
+      });
     }
 
-    function loadCombination() {
-      const slot = document.getElementById('save-slot-selector').value;
-      const savedCards = JSON.parse(localStorage.getItem(`savedCombination${slot}`));
-      if (savedCards) {
-        resetField();
-        savedCards.forEach(src => {
-          const card = window.cardData.find(c => c.画像 === src);
-          if (card) addCardToField(card);
-        });
-        alert(`スロット${slot}からカードの並びを読み込みました！`);
-      } else {
-        alert(`スロット${slot}に保存されたデータがありません。`);
+    const buttonMapping = {
+      'A1': 3, 'A2': 4, 'A3': 5, 'A4': 6, 'A5': 7, 'A6': 8, 'A7': 9, 'A8': 16, 'A9': 15, 'A10': 14, 'A11': 13, 'A12': 12, 'A13': 11, 'A14': 10,
+      'B1': 31, 'B2': 32, 'B3': 33, 'B4': 29, 'B5': 34, 'B6': 35, 'B7': 36, 'B8': 42, 'B9': 41, 'B10': 40, 'B11': 30, 'B12': 39, 'B13': 38, 'B14': 37,
+      'C1': 17, 'C2': 18, 'C3': 19, 'C4': 1, 'C5': 20, 'C6': 21, 'C7': 22, 'C8': 28, 'C9': 27, 'C10': 26, 'C11': 1, 'C12': 25, 'C13': 24, 'C14': 23,
+      'D1': 43, 'D2': 44, 'D3': 45, 'D4': 2, 'D5': 46, 'D6': 47, 'D7': 48, 'D8': 54, 'D9': 53, 'D10': 53, 'D11': 2, 'D12': 51, 'D13': 50, 'D14': 49
+    };
+
+    function mapCardsToButtons(cards) {
+      document.querySelectorAll('.keyboard-button').forEach(button => {
+        const cardId = buttonMapping[button.dataset.label];
+        const card = cards.find(c => c.カードID === cardId);
+
+        if (card) {
+          const img = document.createElement('img');
+          img.src = card.画像;
+          img.alt = card.カード名;
+          button.appendChild(img);
+
+          button.addEventListener('click', () => addCardToField(card));
+        }
+      });
+    }
+
+    function addCardToField(card) {
+      const rows = fieldBox.querySelectorAll('.field-row');
+      for (let row of rows) {
+        const slots = row.querySelectorAll('.field-slot');
+        for (let slot of slots) {
+          if (!slot.hasChildNodes()) {
+            const cardElement = document.createElement('div');
+            cardElement.classList.add('field-card');
+
+            const img = document.createElement('img');
+            img.src = card.画像;
+            img.alt = card.カード名;
+
+            cardElement.appendChild(img);
+            cardElement.addEventListener('click', () => removeCardFromField(cardElement, slot));
+
+            slot.replaceWith(cardElement);
+            actionHistory.push({ action: 'add', element: cardElement, slot: slot });
+            return;
+          }
+        }
       }
+    }
+
+    function removeCardFromField(cardElement, slot) {
+      const emptySlot = document.createElement('div');
+      emptySlot.classList.add('field-slot');
+      cardElement.replaceWith(emptySlot);
+      actionHistory.push({ action: 'remove', element: emptySlot, slot: cardElement });
+    }
+
+    function undoLastAction() {
+      const lastAction = actionHistory.pop();
+      if (lastAction) {
+        if (lastAction.action === 'add') {
+          lastAction.element.replaceWith(lastAction.slot);
+        } else if (lastAction.action === 'remove') {
+          lastAction.slot.replaceWith(lastAction.element);
+        }
+      }
+    }
+
+    function resetField() {
+      const rows = fieldBox.querySelectorAll('.field-row');
+      rows.forEach(row => {
+        row.innerHTML = '';
+        for (let i = 0; i < currentColumns; i++) {
+          const slot = document.createElement('div');
+          slot.classList.add('field-slot');
+          row.appendChild(slot);
+        }
+      });
+      actionHistory.length = 0;
+    }
+
+    function updateFieldPattern() {
+      const pattern = document.getElementById('pattern').value;
+      const customInput = document.getElementById('custom-columns');
+
+      if (pattern === 'custom') {
+        customInput.style.display = 'inline';
+        currentColumns = parseInt(customInput.value);
+      } else {
+        customInput.style.display = 'none';
+        currentColumns = parseInt(pattern);
+      }
+
+      const rows = fieldBox.querySelectorAll('.field-row');
+      rows.forEach(row => {
+        row.innerHTML = '';
+        row.style.gridTemplateColumns = `repeat(${currentColumns}, 1fr)`;
+        for (let i = 0; i < currentColumns; i++) {
+          const slot = document.createElement('div');
+          slot.classList.add('field-slot');
+          row.appendChild(slot);
+        }
+      });
+    }
+
+    function saveCombination() {
+      const cards = Array.from(document.querySelectorAll('.field-card img')).map(img => img.src);
+      localStorage.setItem('savedCombination', JSON.stringify(cards));
+      alert('カードの並びを保存しました！');
     }
   </script>
 </body>
