--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -41,7 +41,7 @@
       position: absolute;
       top: 50px;
       right: 0;
-      background-color: #444;
+      background-color: rgba(68, 68, 68, 0.9);
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       padding: 10px;
@@ -138,6 +138,11 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       overflow: hidden;
       cursor: pointer;
+      transition: transform 0.2s;
+    }
+    .field-card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
     .field-card img {
       width: 100%;
