--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -19,41 +19,14 @@
       overflow: hidden;
     }
     .menu-bar {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      z-index: 1000;
-    }
-    .menu-toggle {
-      background-color: #555;
-      color: white;
-      border: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #444;
       padding: 10px;
-      border-radius: 50%;
-      cursor: pointer;
-      transition: background-color 0.3s, transform 0.3s;
-      font-size: 1.2rem;
+      gap: 10px;
     }
-    .menu-toggle.active {
-      transform: rotate(90deg);
-      background-color: #777;
-    }
-    .menu-popup {
-      display: none;
-      position: absolute;
-      top: 50px;
-      right: 0;
-      background-color: rgba(68, 68, 68, 0.9);
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      padding: 10px;
-      width: 250px; /* 固定幅でボタンが隠れないように調整 */
-      z-index: 1001; /* 他の要素の上に表示 */
-    }
-    .menu-popup button {
-      display: block;
-      width: 100%;
-      margin: 5px 0;
+    .menu-button {
       background-color: #555;
       color: white;
       border: none;
@@ -62,14 +35,13 @@
       cursor: pointer;
       transition: background-color 0.3s;
     }
-    .menu-popup button:hover {
+    .menu-button:hover {
       background-color: #777;
     }
     .menu-title {
       color: white;
       font-size: 1.2rem;
       margin: 0;
-      text-align: center;
     }
     .pattern-selector {
       display: flex;
@@ -221,24 +193,17 @@
         width: 100%;
         height: auto;
       }
-      .menu-popup {
-        width: 80%;
-        max-width: 300px;
-      }
     }
   </style>
 </head>
 <body>
   <div class="menu-bar">
-    <button class="menu-toggle" onclick="toggleMenu()">☰</button>
-    <div class="menu-popup" id="menu-popup">
-      <p class="menu-title">ステップキーボード</p>
-      <button onclick="window.location.href='index.html'">カードライブラリーへ戻る</button>
-      <button onclick="window.location.href='https://noritap.github.io/tapdance-cardgame/'">タイトル画面に戻る</button>
-      <button onclick="saveCombination()">保存</button>
-      <button onclick="window.location.href='practice.html'">練習モード</button>
-      <button onclick="window.location.href='https://noritap.github.io/tapdance-cardgame2/'">ゲーム画面へ</button>
-    </div>
+    <p class="menu-title">ステップキーボード</p>
+    <button class="menu-button" onclick="window.location.href='index.html'">カードライブラリーへ戻る</button>
+    <button class="menu-button" onclick="window.location.href='https://noritap.github.io/tapdance-cardgame/'">タイトル画面に戻る</button>
+    <button class="menu-button" onclick="saveCombination()">保存</button>
+    <button class="menu-button" onclick="window.location.href='practice.html'">練習モード</button>
+    <button class="menu-button" onclick="window.location.href='https://noritap.github.io/tapdance-cardgame2/'">ゲーム画面へ</button>
   </div>
 
   <div class="pattern-selector">
@@ -269,17 +234,6 @@
   <div class="keyboard-container" id="keyboard-container"></div>
 
   <script>
-    function toggleMenu() {
-      const menu = document.getElementById('menu-popup');
-      const toggleButton = document.querySelector('.menu-toggle');
-      if (menu.style.display === 'block') {
-        menu.style.display = 'none';
-      } else {
-        menu.style.display = 'block';
-      }
-      toggleButton.classList.toggle('active');
-    }
-
     fetch('./tap_dance_card_data_updated.json')
       .then(response => response.json())
       .then(data => {
